# MUMPS_cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  SetupMumps.cmake  mumpsConfig.cmake.in
.github/actions/oneapi/: action.yml  update-environment.sh
.github/workflows/: ci.yml
MATLAB/: CMakeLists.txt
PORD/: CMakeLists.txt
buildutilities/: DependencyGraph.py  DependencyListener.py  Driver.py  FortranModuleTree.py  Graph.py  Templater.py  cmake.stg  make.g4  make.interp  make.tokens  makeLexer.interp  makeLexer.py  makeListener.py  makeParser.py  requirements.txt
examples/: CMakeLists.txt  cpp_example.cpp
libseq/: CMakeLists.txt  elapse.h.patch.in
src/: CMakeLists.txt  mumps_c.c.patch.in  mumps_common.h.patch.in
